--- a/app/src/main/res/navigation/delegation_nav_graph.xml
+++ b/app/src/main/res/navigation/delegation_nav_graph.xml
@@ -5,13 +5,7 @@
     android:id="@+id/delegation_nav_graph"
     app:startDestination="@id/delegateListFragment">
 
-    <action
-        android:id="@+id/action_open_remove_votes"
-        app:destination="@id/removeVoteFragment"
-        app:enterAnim="@anim/fragment_open_enter"
-        app:exitAnim="@anim/fragment_open_exit"
-        app:popEnterAnim="@anim/fragment_close_enter"
-        app:popExitAnim="@anim/fragment_close_exit" />
+    <include app:graph="@navigation/delegation_details_nav_graph" />
 
     <fragment
         android:id="@+id/delegateListFragment"
@@ -21,77 +15,11 @@
 
         <action
             android:id="@+id/action_delegateListFragment_to_delegateDetailsFragment"
-            app:destination="@id/delegateDetailsFragment"
+            app:destination="@id/delegation_details_nav_graph"
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
-    <fragment
-        android:id="@+id/delegateDetailsFragment"
-        android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegate.detail.main.DelegateDetailsFragment"
-        android:label="DelegateDetailsFragment"
-        tools:layout="@layout/fragment_delegate_details">
-        <action
-            android:id="@+id/action_delegateDetailsFragment_to_votedReferendaFragment"
-            app:destination="@id/votedReferendaFragment"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit"
-            app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
-
-        <action
-            android:id="@+id/action_delegateDetailsFragment_to_delegateFullDescription"
-            app:destination="@id/delegateFullDescription"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit"
-            app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
-
-        <action
-            android:id="@+id/action_delegateDetailsFragment_to_delegateDelegatorsFragment"
-            app:destination="@id/delegateDelegatorsFragment"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit"
-            app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
-
-        <action
-            android:id="@+id/action_delegateDetailsFragment_to_selectDelegationTracks"
-            app:destination="@id/selectDelegationTracks"
-            app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit"
-            app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/votedReferendaFragment"
-        android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegate.detail.votedReferenda.VotedReferendaFragment"
-        android:label="VotedReferendaFragment"
-        tools:layout="@layout/fragment_voted_referenda" />
-
-    <fragment
-        android:id="@+id/delegateFullDescription"
-        android:name="io.novafoundation.nova.feature_governance_impl.presentation.common.description.DescriptionFragment"
-        android:label="DescriptionFragment"
-        tools:layout="@layout/fragment_description" />
-
-    <fragment
-        android:id="@+id/selectDelegationTracks"
-        android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegate.tracks.select.SelectDelegationTracksFragment"
-        android:label="SelectDelegationTracksFragment"
-        tools:layout="@layout/fragment_select_delegation_tracks" />
-
-    <fragment
-        android:id="@+id/removeVoteFragment"
-        android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegation.removeVotes.RemoveVotesFragment"
-        android:label="RemoveVoteFragment"
-        tools:layout="@layout/fragment_remove_votes" />
-
-    <fragment
-        android:id="@+id/delegateDelegatorsFragment"
-        android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegate.delegators.DelegateDelegatorsFragment"
-        android:label="DelegateDelegatorsFragment" />
 </navigation>
