--- a/feature-governance-impl/src/main/res/layout/item_delegate.xml
+++ b/feature-governance-impl/src/main/res/layout/item_delegate.xml
@@ -88,7 +88,6 @@
             style="@style/TextAppearance.NovaFoundation.Regular.Footnote.Primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             app:layout_constraintStart_toStartOf="@+id/itemDelegateDelegationsLabel"
             app:layout_constraintTop_toBottomOf="@+id/itemStatLabelsBottom"
             tools:text="1,311" />
@@ -208,8 +207,13 @@
                 android:layout_marginVertical="18dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="4dp"
+                android:layout_marginEnd="48dp"
+                android:ellipsize="end"
                 app:chipSize="normal"
+                app:layout_constrainedWidth="true"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/itemDelegateVotesDetails"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:chipIcon="@drawable/rock"
