--- a/feature-governance-impl/src/main/res/layout/view_chip.xml
+++ b/feature-governance-impl/src/main/res/layout/view_chip.xml
@@ -26,6 +26,7 @@
         android:layout_gravity="center_vertical"
         android:textColor="@color/chip_text"
         tools:layout_marginEnd="8dp"
+        android:lines="1"
         tools:layout_marginVertical="4.5dp"
         android:includeFontPadding="false"
         tools:style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
