--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -89,6 +89,7 @@
 
     <declare-styleable name="TableView">
         <attr name="title" />
+        <attr name="showBackground" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="GoNextView">
