--- a/feature-governance-impl/src/main/res/layout/bottom_sheet_unavailable_tracks.xml
+++ b/feature-governance-impl/src/main/res/layout/bottom_sheet_unavailable_tracks.xml
@@ -34,6 +34,10 @@
         android:overScrollMode="never"
         android:paddingBottom="24dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/unavailableTracksTitle" />
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/unavailableTracksTitle"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="-31dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
