--- a/feature-governance-impl/src/main/res/layout/item_delegation_tracks_preset.xml
+++ b/feature-governance-impl/src/main/res/layout/item_delegation_tracks_preset.xml
@@ -7,6 +7,7 @@
     android:layout_width="wrap_content"
     android:layout_height="32dp"
     android:paddingVertical="0dp"
+    android:paddingHorizontal="12dp"
     android:layout_marginHorizontal="4dp"
     android:textColor="@color/button_text_accent"
     app:appearance="secondary"
