--- a/feature-governance-impl/src/main/res/layout/fragment_new_delegation_choose_amount.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_new_delegation_choose_amount.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerVisible="false"
-        app:homeButtonIcon="@drawable/ic_close"
+        app:homeButtonIcon="@drawable/ic_arrow_back"
         app:titleText="@string/delegation_add_delegation" />
 
     <ScrollView
