--- a/feature-governance-impl/src/main/res/layout/item_referendum_voter.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum_voter.xml
@@ -14,6 +14,7 @@
         android:layout_width="0dp"
         android:layout_marginEnd="24dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/text_primary"
         android:layout_weight="1" />
 
     <LinearLayout
