--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -11,7 +11,8 @@
     android:paddingVertical="16dp"
     tools:background="@color/block_background">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp">
@@ -19,19 +20,18 @@
         <TextView
             android:id="@+id/itemReferendumStatus"
             style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:includeFontPadding="false"
+            android:layout_weight="1"
             android:textColor="@color/text_primary"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Passing" />
 
         <TextView
             android:id="@+id/itemReferendumTimeEstimate"
             style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:ellipsize="end"
@@ -39,13 +39,9 @@
             android:includeFontPadding="false"
             android:maxLines="2"
             android:textColor="@color/text_secondary"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/itemReferendumStatus"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Approve in 3:59:59" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/itemReferendumName"
@@ -88,47 +84,17 @@
         android:clipToPadding="false"
         android:paddingHorizontal="16dp" />
 
-    <FrameLayout
-        android:id="@+id/itemReferendumYourVoiceGroup"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="12dp"
+        android:id="@+id/itermReferendumDivider"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="12dp">
+        android:background="@color/divider" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/divider" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
-
-            <TextView
-                android:id="@+id/itemReferendumYourVoteType"
-                style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/bg_chip"
-                android:includeFontPadding="false"
-                android:paddingHorizontal="8dp"
-                android:paddingVertical="4.5dp"
-                android:textColor="@color/chip_text"
-                tools:text="AYE" />
-
-            <TextView
-                android:id="@+id/itemReferendumYourVoteDetails"
-                style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="6dp"
-                android:includeFontPadding="false"
-                android:textColor="@color/text_secondary"
-                tools:text="To pass: 50%" />
-
-        </LinearLayout>
-    </FrameLayout>
+    <io.novafoundation.nova.feature_governance_impl.presentation.referenda.list.view.YourMultiVotePreviewView
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="16dp"
+        android:id="@+id/itemReferendumYourVote"
+        android:layout_height="wrap_content" />
 </LinearLayout>
