Delegate details polishing (#744)
* Delegate details polishing

* run ktlint

* Run ktlint

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -222,4 +222,8 @@
     <declare-styleable name="ReadMoreView">
         <attr name="android:text" />
     </declare-styleable>
+
+    <declare-styleable name="AddressView">
+        <attr name="android:textColor"/>
+    </declare-styleable>
 </resources>
