--- a/common/src/main/res/layout/view_banner.xml
+++ b/common/src/main/res/layout/view_banner.xml
@@ -16,6 +16,20 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/bannerClose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_margin="4dp"
+            android:padding="12dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_close_circle_translucent"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+        <ImageView
             android:id="@+id/bannerImage"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
