--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -212,6 +212,7 @@
     <declare-styleable name="BannerView">
         <attr name="android:src" format="reference" />
         <attr name="bannerBackground" format="reference|color" />
+        <attr name="showClose" />
     </declare-styleable>
 
     <declare-styleable name="ListChooserView">
@@ -224,6 +225,6 @@
     </declare-styleable>
 
     <declare-styleable name="AddressView">
-        <attr name="android:textColor"/>
+        <attr name="android:textColor" />
     </declare-styleable>
 </resources>
