Rebag confirm skeleton

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -380,6 +380,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_mainFragment_to_rebag"
+            app:destination="@id/rebagFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
     <fragment
@@ -1103,4 +1111,9 @@
     <include app:graph="@navigation/delegation_nav_graph" />
 
     <include app:graph="@navigation/your_delegations_nav_graph" />
+
+    <fragment
+        android:id="@+id/rebagFragment"
+        android:name="io.novafoundation.nova.feature_staking_impl.presentation.bagList.rebag.RebagFragment"
+        android:label="RebagFragment" />
 </navigation>
