Fix regressions on confirm vote

--- a/feature-governance-impl/src/main/res/layout/fragment_referendum_confirm_vote.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referendum_confirm_vote.xml
@@ -50,7 +50,7 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp" />
 
-                <io.novafoundation.nova.feature_governance_impl.presentation.view.YourVoteView
+                <io.novafoundation.nova.feature_governance_impl.presentation.view.YourMultiVoteView
                     android:id="@+id/confirmReferendumVoteResult"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
