--- a/app/src/main/res/navigation/delegation_nav_graph.xml
+++ b/app/src/main/res/navigation/delegation_nav_graph.xml
@@ -20,6 +20,31 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_delegateListFragment_to_delegateSearchFragment"
+            app:destination="@id/delegateSearchFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+    </fragment>
+
+
+    <fragment
+        android:id="@+id/delegateSearchFragment"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.delegation.delegate.search.DelegateSearchFragment"
+        android:label="DelegateSearchFragment"
+        tools:layout="@layout/fragment_delegate_search">
+
+        <action
+            android:id="@+id/action_delegateSearchFragment_to_delegateDetailsFragment"
+            app:destination="@id/delegation_details_nav_graph"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+
     </fragment>
 
 </navigation>
