--- a/feature-governance-impl/src/main/res/layout/fragment_referendum_voters.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referendum_voters.xml
@@ -35,7 +35,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/referendumVotersList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:paddingBottom="24dp"
