--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/itemCrowdloanGroup"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
@@ -12,32 +11,32 @@
     tools:background="@color/block_background">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp">
+        android:layout_marginHorizontal="16dp"
+        android:gravity="top"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/itemReferendumStatus"
             style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:includeFontPadding="false"
-            android:layout_weight="1"
+            android:lines="1"
             android:textColor="@color/text_primary"
-            tools:text="Passing" />
+            tools:text="Passings" />
 
         <TextView
             android:id="@+id/itemReferendumTimeEstimate"
             style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="end"
             android:includeFontPadding="false"
-            android:maxLines="2"
             android:textColor="@color/text_secondary"
             tools:text="Approve in 3:59:59" />
 
@@ -85,16 +84,16 @@
         android:paddingHorizontal="16dp" />
 
     <View
+        android:id="@+id/itermReferendumDivider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="12dp"
-        android:id="@+id/itermReferendumDivider"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="12dp"
         android:background="@color/divider" />
 
     <io.novafoundation.nova.feature_governance_impl.presentation.referenda.list.view.YourMultiVotePreviewView
-        android:layout_width="match_parent"
-        android:layout_marginHorizontal="16dp"
         android:id="@+id/itemReferendumYourVote"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp" />
 </LinearLayout>
