Fixed multi voting text fitting

--- a/feature-governance-impl/src/main/res/layout/view_your_vote.xml
+++ b/feature-governance-impl/src/main/res/layout/view_your_vote.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="44dp"
     tools:background="@color/secondary_screen_background"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
@@ -11,13 +12,13 @@
         android:id="@+id/viewYourVote"
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="wrap_content"
-        android:layout_marginVertical="14dp"
+        android:layout_marginVertical="8dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="80dp"
         android:ellipsize="end"
         android:includeFontPadding="false"
-        android:singleLine="true"
+        android:maxLines="2"
         android:textColor="@color/text_secondary"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +38,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/bg_chip"
         android:includeFontPadding="false"
+        android:layout_marginVertical="11dp"
         android:paddingHorizontal="8dp"
         android:paddingVertical="4.5dp"
         android:textColor="@color/text_positive"
@@ -51,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:gravity="end"
+        android:layout_marginVertical="5dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
