--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -86,6 +86,7 @@
         <attr name="titleIcon" format="reference|color" />
         <attr name="titleIconStart" format="reference|color" />
         <attr name="primaryValueIconTint" format="color" />
+        <attr name="titleEllipsisable" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="TableView">
